[package]
name = "tokio-postgres-rustls"
description = "Rustls integration for tokio-postgres"
version = "0.10.0"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
repository = "https://github.com/jbg/tokio-postgres-rustls"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
futures = { version = "0.3", default-features = false }
ring = { version = "0.16", default-features = false }
rustls = { version = "0.21", default-features = false }
tokio = { version = "1", default-features = false }
tokio-postgres = { git = "https://github.com/neondatabase/rust-postgres/", branch = "neon", default-features = false}
tokio-rustls = { version = "0.24", default-features = false }

[dev-dependencies]
env_logger = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-postgres = { git = "https://github.com/neondatabase/rust-postgres/", branch = "neon" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
